Update contact image for Marta Xavier

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,4 +15,4 @@ social:
 - {icon: 'linkedin', link: 'https://linkedin.com/in/martalouresxavier'}
 
 contacts:
-- {name: 'Marta Xavier', title: 'PhD Candidate', department: 'Institute for Systems and Robotics', institution: 'Instituto Superior Técnico', email: 'marta.xavier@tecnico.ulisboa.pt', image: 'assets/img/contact.jpg'}
+- {name: 'Marta Xavier', title: 'PhD Candidate', department: 'Institute for Systems and Robotics', institution: 'Instituto Superior Técnico', email: 'marta.xavier@tecnico.ulisboa.pt', image: 'assets/img/marta.jpg'}
