Update social links in settings.yml

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,7 +11,7 @@ work:
 
 social:
 - {icon: 'github', link: 'https://github.com/martaxavier'}
-- {icon: 'scholar', link: 'https://twitter.com/paululele'}
+- {icon: 'scholar', link: 'https://scholar.google.com/citations?user=ANUWCqMAAAAJ&hl=en'}
 - {icon: 'linkedin', link: 'https://linkedin.com/in/martalouresxavier'}
 
 contacts:
