--- a/_data/cv/education.yml
+++ b/_data/cv/education.yml
@@ -1,5 +1,8 @@
-- title: 'B.Sc. (Hons) Physics & Applied Mathematics'
-  description: 'The University of Waterloo (1976-1980)'
+- title: 'B.Sc. Biological Engineering'
+  description: 'Instituto Superior Técnico, Universidade de Lisboa (2014-2017)'
 
-- title: 'Ph.D. Theoretical High Energy Physics'
-  description: 'The University of Texas at Austin (1980-1985)'
+- title: 'M.Sc. Biomedical Engineering - Imaging, Signals and Instrumentation'
+  description: 'Instituto Superior Técnico, Universidade de Lisboa (2017-2019)'  
+
+- title: 'Ph.D. Biomedical Engineering - Computational Neuroscience'
+  description: 'Instituto Superior Técnico, Universidade de Lisboa (2021-present)'
