Update academic experience entries in YAML file

--- a/_data/cv/academic-experience.yml
+++ b/_data/cv/academic-experience.yml
@@ -1,5 +1,5 @@
-- title: 'Professor of Physics'
-  description: 'McMaster University (2005 – present)'
+- title: 'Teaching Assistant - Neuroimaging'
+  description: 'Instituto Superior Técnico (2024)'
 
-- title: 'Associate Faculty'
-  description: 'McGill University (1987 – 2005)'
+- title: 'Research Assistant'
+  description: 'Institute for Systems and Robotics (2020-2021)'
