Update academic experience descriptions for clarity

--- a/_data/cv/academic-experience.yml
+++ b/_data/cv/academic-experience.yml
@@ -1,5 +1,5 @@
 - title: 'Teaching Assistant - Neuroimaging'
-  description: 'Instituto Superior Técnico (2024)'
+  description: 'Instituto Superior Técnico, Universidade de Lisboa (2024)'
 
 - title: 'Research Assistant'
-  description: 'Institute for Systems and Robotics (2020-2021)'
+  description: 'LaSEEB, Institute for Systems and Robotics (2020-2021)'
