Correct university name in education entries
Updated university name from 'Universidade de Lisboa' to 'University of Lisbon' in education entries.

--- a/_data/cv/education.yml
+++ b/_data/cv/education.yml
@@ -1,8 +1,8 @@
 - title: 'B.Sc. Biological Engineering'
-  description: 'Instituto Superior Técnico, Universidade de Lisboa (2014-2017)'
+  description: 'Instituto Superior Técnico, University of Lisbon (2014-2017)'
 
 - title: 'M.Sc. Biomedical Engineering - Imaging, Signals and Instrumentation'
-  description: 'Instituto Superior Técnico, Universidade de Lisboa (2017-2019)'  
+  description: 'Instituto Superior Técnico, University of Lisbon (2017-2019)'  
 
 - title: 'Ph.D. Biomedical Engineering - Computational Neuroscience'
-  description: 'Instituto Superior Técnico, Universidade de Lisboa (2021-present)'
+  description: 'Instituto Superior Técnico, University of Lisbon (2021-present)'
