--- a/_data/work/oral-communications.yml
+++ b/_data/work/oral-communications.yml
@@ -1,8 +1,8 @@
-- title: 'B.Sc. Biological Engineering'
-  description: 'Instituto Superior Técnico, University of Lisbon (2014-2017)'
+- title: 'EEG functional connectivity features predict the activity of the fMRI default mode network'
+  description: '2021 OHBM Annual Meeting'
 
-- title: 'M.Sc. Biomedical Engineering - Imaging, Signals and Instrumentation'
-  description: 'Instituto Superior Técnico, University of Lisbon (2017-2019)'  
+- title: 'EEG functional connectivity features predict the activity of the fMRI default mode network'
+  description: '2021 OHBM Annual Meeting'
 
-- title: 'Ph.D. Biomedical Engineering - Computational Neuroscience'
-  description: 'Instituto Superior Técnico, University of Lisbon (2021-present)'
+- title: 'EEG functional connectivity features predict the activity of the fMRI default mode network'
+  description: '2021 OHBM Annual Meeting'
