Update poster communications titles and descriptions

--- a/_data/work/poster-communications.yml
+++ b/_data/work/poster-communications.yml
@@ -1,5 +1,5 @@
-- title: 'Teaching Assistant - Neuroimaging'
-  description: 'Instituto Superior Técnico, Universidade de Lisboa (2024)'
+- title: 'EEG functional connectivity features predict the activity of the fMRI default mode network'
+  description: '2021 OHBM Annual Meeting'
 
-- title: 'Research Assistant'
-  description: 'LaSEEB, Institute for Systems and Robotics (2020-2021)'
+- title: 'EEG functional connectivity features predict the activity of the fMRI default mode network'
+  description: '2021 OHBM Annual Meeting'
