Update menu to include communications and remove work

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 menu:
 - {name: 'publications', url: '/publications'}
-- {name: 'work', url: '/work'}
+- {name: 'communications', url: '/communications'}
 - {name: 'cv', url: '/cv'}
 - {name: 'contact', url: '/contact'}
 
