Update social links in settings.yml

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,7 +6,7 @@ menu:
 
 social:
 - {icon: 'github', link: 'https://github.com/martaxavier'}
-- {icon: 'scholar', link: 'https://scholar.google.com/citations?user=ANUWCqMAAAAJ&hl=en'}
+- {icon: 'graduation-cap', link: 'https://scholar.google.com/citations?user=ANUWCqMAAAAJ&hl=en'}
 - {icon: 'linkedin', link: 'https://linkedin.com/in/martalouresxavier'}
 
 contacts:
