Update posters.yml to reflect new role

--- a/_data/communications/posters.yml
+++ b/_data/communications/posters.yml
@@ -1,8 +1,10 @@
-- title: 'B.Sc. Biological Engineering'
-  description: 'Instituto Superior Técnico, University of Lisbon (2014-2017)'
 
-- title: 'M.Sc. Biomedical Engineering - Imaging, Signals and Instrumentation'
-  description: 'Instituto Superior Técnico, University of Lisbon (2017-2019)'  
+- title: "Research Assistant"
+  url: "https://laseeb.org"
+  conference: "LaSEEB, Institute for Systems and Robotics"
+  date: "2020–2021"
 
-- title: 'Ph.D. Biomedical Engineering - Computational Neuroscience'
-  description: 'Instituto Superior Técnico, University of Lisbon (2021-present)'
+- title: "Research Assistant"
+  url: "https://laseeb.org"
+  conference: "LaSEEB, Institute for Systems and Robotics"
+  date: "2020–2021"
