--- a/_data/communications/talks.yml
+++ b/_data/communications/talks.yml
@@ -1,5 +1,11 @@
-- title: 'Teaching Assistant - Neuroimaging'
-  description: 'Instituto Superior Técnico, Universidade de Lisboa (2024)'
 
-- title: 'Research Assistant'
-  description: 'LaSEEB, Institute for Systems and Robotics (2020-2021)'
+- title: "Research Assistant"
+  url: "https://laseeb.org"
+  conference: "LaSEEB, Institute for Systems and Robotics"
+  date: "2020–2021"
+
+  
+- title: "Research Assistant"
+  url: "https://laseeb.org"
+  conference: "LaSEEB, Institute for Systems and Robotics"
+  date: "2020–2021"
