--- a/_data/communications/posters.yml
+++ b/_data/communications/posters.yml
@@ -1,10 +1,9 @@
+- title: "Research Assistant"
+- url: "https://laseeb.org"
+- conference: "LaSEEB, Institute for Systems and Robotics"
+- date: "2020–2021"
 
 - title: "Research Assistant"
-  url: "https://laseeb.org"
-  conference: "LaSEEB, Institute for Systems and Robotics"
-  date: "2020–2021"
-
-- title: "Research Assistant"
-  url: "https://laseeb.org"
-  conference: "LaSEEB, Institute for Systems and Robotics"
-  date: "2020–2021"
+- url: "https://laseeb.org"
+- conference: "LaSEEB, Institute for Systems and Robotics"
+- date: "2020–2021"
