--- a/_data/communications/talks.yml
+++ b/_data/communications/talks.yml
@@ -1,6 +1,6 @@
 - title: "Metastable Oscillatory Modes as a Signature of Entropy Management in the Brain"
 - url: "martaxavier.github.io"
-- conference: "BrainModes Conference,"
+- conference: "BrainModes Conference"
 - date: "November 2024"
 
 - title: "Effect of fMRI denoising strategies on the test-retest reliability of resting state networks"
