Fix formatting in talks.yml for conference details

--- a/_data/communications/talks.yml
+++ b/_data/communications/talks.yml
@@ -1,7 +1,7 @@
 - title: "Metastable Oscillatory Modes as a Signature of Entropy Management in the Brain"
-- url: "martaxavier.github.io"
-- conference: "BrainModes Conference"
-- date: "November 2024"
+url: "martaxavier.github.io"
+conference: "BrainModes Conference"
+date: "November 2024"
 
 - title: "Effect of fMRI denoising strategies on the test-retest reliability of resting state networks"
 - url: "martaxavier.github.io"
