--- a/_data/communications/talks.yml
+++ b/_data/communications/talks.yml
@@ -1,14 +1,14 @@
 - title: "Metastable Oscillatory Modes as a Signature of Entropy Management in the Brain"
-url: "martaxavier.github.io"
-conference: "BrainModes Conference"
-date: "November 2024"
+  url: "martaxavier.github.io"
+  conference: "BrainModes Conference"
+  date: "November 2024"
 
 - title: "Effect of fMRI denoising strategies on the test-retest reliability of resting state networks"
-- url: "martaxavier.github.io"
-- conference: "Meeting of the ISMRM Iberian Chapter"
-- date: "June 2022"
+  url: "martaxavier.github.io"
+  conference: "Meeting of the ISMRM Iberian Chapter"
+  date: "June 2022"
 
 - title: "Deriving EEG models to predict the activity of the fMRI default mode network"
-- url: "martaxavier.github.io"
-- conference: "ISMRM British & Irish Chapter & Iberian Chapter (Virtual Meeting)"
-- date: "April 2021"
+  url: "martaxavier.github.io"
+  conference: "ISMRM British & Irish Chapter & Iberian Chapter (Virtual Meeting)"
+  date: "April 2021"
